Add Icon for Viewport nodes

--- a/src/DynamoRevitIcons/RevitNodesImages.resx
+++ b/src/DynamoRevitIcons/RevitNodesImages.resx
@@ -14072,4 +14072,226 @@
         kYw5+Tc+CtikJeAKY9EeKrgDWjQnMgYyPM0AAAAASUVORK5CYII=
 </value>
   </data>
+  <data name="Revit.Elements.Viewport.BoxCenter.Large" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAGAAAABgCAYAAADimHc4AAABlklEQVR4nO3cQU7CQBiG4da47DnggGz0
+        BK44IJyDvYYN1ijaaWf6FfM8a6Clb/7JECgdAAAAAAC014+PcDqd3l3zrtvtdrfrcrlc3oZheK35+n3/
+        edmfar7wP/VyjdDqrQkwTbMIAkzXJIIAZapHEKBc1QgCzFMtggDzVYkgwDKLIzyXPuF4PM4+2OFwmP3c
+        rZ3DyDVCN/fDmgmoY/YkCFDPrAjFS9BYg3FuctwlS1ah4uXIBNRXNAkCtDE5ggDtTIogQFt/RhCgvV8j
+        LNoF3bPiruOL1K5sgru7IxOwnh8nQYB1fYvQZAkaa70ctV52hmHoJzxsNhMQJkBY8RK04Z3GXaXnfD6f
+        W/8+6rasmYAwAcIECBMgTIAwAcIECBMgTIAwAcIECBMgTIAwAcIECBMgTICwRTdoPMq3Y1s+ZxMQJkBY
+        898FPeKX+GsyAWEChDVZgiw705mAMAHCBAgTIEyAsEW7oNKbL7bwZx1bYwLCBAjzx60B+/3eDRpbIUCY
+        AGEChAkQJkCYAGECAAAAAADAP9d13QfPz34Kjx7J0gAAAABJRU5ErkJggg==
+    </value>
+  </data>
+  <data name="Revit.Elements.Viewport.BoxCenter.Small" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAACXBIWXMAAAsTAAALEwEAmpwYAAAFIGlU
+        WHRYTUw6Y29tLmFkb2JlLnhtcAAAAAAAPD94cGFja2V0IGJlZ2luPSLvu78iIGlkPSJXNU0wTXBDZWhp
+        SHpyZVN6TlRjemtjOWQiPz4gPHg6eG1wbWV0YSB4bWxuczp4PSJhZG9iZTpuczptZXRhLyIgeDp4bXB0
+        az0iQWRvYmUgWE1QIENvcmUgNS42LWMxNDUgNzkuMTYzNDk5LCAyMDE4LzA4LzEzLTE2OjQwOjIyICAg
+        ICAgICAiPiA8cmRmOlJERiB4bWxuczpyZGY9Imh0dHA6Ly93d3cudzMub3JnLzE5OTkvMDIvMjItcmRm
+        LXN5bnRheC1ucyMiPiA8cmRmOkRlc2NyaXB0aW9uIHJkZjphYm91dD0iIiB4bWxuczp4bXA9Imh0dHA6
+        Ly9ucy5hZG9iZS5jb20veGFwLzEuMC8iIHhtbG5zOmRjPSJodHRwOi8vcHVybC5vcmcvZGMvZWxlbWVu
+        dHMvMS4xLyIgeG1sbnM6cGhvdG9zaG9wPSJodHRwOi8vbnMuYWRvYmUuY29tL3Bob3Rvc2hvcC8xLjAv
+        IiB4bWxuczp4bXBNTT0iaHR0cDovL25zLmFkb2JlLmNvbS94YXAvMS4wL21tLyIgeG1sbnM6c3RFdnQ9
+        Imh0dHA6Ly9ucy5hZG9iZS5jb20veGFwLzEuMC9zVHlwZS9SZXNvdXJjZUV2ZW50IyIgeG1wOkNyZWF0
+        b3JUb29sPSJBZG9iZSBQaG90b3Nob3AgQ0MgMjAxOSAoTWFjaW50b3NoKSIgeG1wOkNyZWF0ZURhdGU9
+        IjIwMjAtMDYtMjRUMTU6Mjc6NTUrMDg6MDAiIHhtcDpNb2RpZnlEYXRlPSIyMDIwLTA2LTI0VDE1OjM2
+        OjMwKzA4OjAwIiB4bXA6TWV0YWRhdGFEYXRlPSIyMDIwLTA2LTI0VDE1OjM2OjMwKzA4OjAwIiBkYzpm
+        b3JtYXQ9ImltYWdlL3BuZyIgcGhvdG9zaG9wOkNvbG9yTW9kZT0iMyIgcGhvdG9zaG9wOklDQ1Byb2Zp
+        bGU9InNSR0IgSUVDNjE5NjYtMi4xIiB4bXBNTTpJbnN0YW5jZUlEPSJ4bXAuaWlkOjEwMjQ4Y2UxLTUw
+        MzUtNGU5Ny1iOGUwLWMxNGFkMGE1ZGE5MyIgeG1wTU06RG9jdW1lbnRJRD0ieG1wLmRpZDoxMDI0OGNl
+        MS01MDM1LTRlOTctYjhlMC1jMTRhZDBhNWRhOTMiIHhtcE1NOk9yaWdpbmFsRG9jdW1lbnRJRD0ieG1w
+        LmRpZDoxMDI0OGNlMS01MDM1LTRlOTctYjhlMC1jMTRhZDBhNWRhOTMiPiA8eG1wTU06SGlzdG9yeT4g
+        PHJkZjpTZXE+IDxyZGY6bGkgc3RFdnQ6YWN0aW9uPSJjcmVhdGVkIiBzdEV2dDppbnN0YW5jZUlEPSJ4
+        bXAuaWlkOjEwMjQ4Y2UxLTUwMzUtNGU5Ny1iOGUwLWMxNGFkMGE1ZGE5MyIgc3RFdnQ6d2hlbj0iMjAy
+        MC0wNi0yNFQxNToyNzo1NSswODowMCIgc3RFdnQ6c29mdHdhcmVBZ2VudD0iQWRvYmUgUGhvdG9zaG9w
+        IENDIDIwMTkgKE1hY2ludG9zaCkiLz4gPC9yZGY6U2VxPiA8L3htcE1NOkhpc3Rvcnk+IDwvcmRmOkRl
+        c2NyaXB0aW9uPiA8L3JkZjpSREY+IDwveDp4bXBtZXRhPiA8P3hwYWNrZXQgZW5kPSJyIj8++EXiuAAA
+        AMpJREFUWIXtljEWhCAMRId9ljkHF7RZT2DFBTlH+mzjFgtIQB8bC6bUQD4TEnUiAku9TLNPgCcALAAQ
+        YxxyE733jpl3ItrOYv7hwJuZd0uAKsSSPgghZEHruhZ37Yk9IJCWIwNQNqnGlYA0CIsu+ClH0YGvGk4E
+        oN2xBAJEtFUBWiC05ETkau8zgAunOV2rzRfvvTOfhBNgAmQArb1f0pW16hy405a3AUYnBx5wB4oOpLXs
+        +Rz3yonIsF8yTXMUA0cJLGXuwAQwB/gA4NVOgmdlTisAAAAASUVORK5CYII=
+    </value>
+  </data>
+  <data name="Revit.Elements.Viewport.BoxOutline.Small" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAVklEQVRYhe3WMQrAMAhAURN6Fr3/cfQy
+        LRRazJBOxQz5fxSCL5tCtLr27Hf3s9JiZvfuIw9VtU1f/FhEvJ/tFQu/AgAAAAAAAAAAADDchPlWI9oj
+        EbkA6xkLveRyUC8AAAAASUVORK5CYII=
+    </value>
+  </data>
+  <data name="Revit.Elements.Viewport.BoxOutline.Large" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAGAAAABgCAYAAAGVn0euAAAACXBIWXMAAAsSAAALEgHS3X78AAABsUlE
+        QVR4nO3bQW6DMBRFUadiLex/PWyGiAERbYnwRzjXn9wzqDpIYh4Pu05DHvM8l4if0KNLKcPyY5qm6mGG
+        9ZdxHB9HD15eOHxIX/mE12mt7SJ8aXR2LS2XT/tD+t5rqWkP4SdEhTOfHiCy9tVYX+9zCRzAAU7LP5Nv
+        tBalHSC8i6y1bjJDu84zLNkBHMABHOAK4Xeztdbl3z/6h5qfotaanyEDHLhXgGUtarFHvdLf4/MSohmA
+        ZgCaAWgGoBmAZgDasDd+71vqLd8T0wxAcw7QDEAzAM0AtF+buSybuO3H//92o63uDbjC3gl2DtAMQDMA
+        zQA0A9AMQDMAzQA0A9AMQDMAzQA0A9AMQLvfvRKZ7pMoftDdAScxzQA0A9DSL6PZpb+CsrMAmAXALABm
+        ATALgO1+96Qk/L9K797dRekMgL2dAVs93wPbs5pVxBkAswCYBcAsAGYBMAuAWQDMAmAWALMAmAXALABm
+        ATALgFkAzAJgFgCzAJgFwCwAZgEwC4BZAMwCYBYAswCYBcAsAGYBsKq7o/2uQDt+TxjmEgSzAJgFwCwA
+        ZgEwC4BZAKmU8gQ823ZAbKZzCwAAAABJRU5ErkJggg==
+    </value>
+  </data>
+  <data name="Revit.Elements.Viewport.BySheetViewLocation.Small" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAACJUlEQVRYhe2Xv2sUQRTHP3fZU0nA8qJN
+        TA5uhe1Ei6AEq1SGVKY4CDH+A6kkTYpzFRH/BCtTiAcpLERtbJQQDISULtwISYhEMKSxyGHIhpXZm9PJ
+        sbvZNbPE4r4wO8yPN++7773v7B1BEOTXvjy8d9LZBfnIBZ57HtgGhnDqB3Euivl4D3EbKKs+FuYIeO5T
+        PPe6NnOnqydcl/s0FJrNZmwObNsuZCAgna8CL4EFYBmoABvAGPAEmAZGcerrHbOQQCZHySReALNAC+jX
+        VjrjRZz6fd3EdA0sRDhHjVtq/RgsfSCEyCKJ58DrS0efVy4GW7dUzicinOsklvHct8A74JNUhxWxcTKN
+        d9tvyINmVI7LKUnLmphTbRfPnY8ikArCqjnA+6GjD0sXgr0xLQKVBHtJ9sQIpIV0VNnuG/eBPeCR7Tee
+        AV9j0tAK1eDUv+uTRQMKkC8xCBwqqXUKrtt5v1o/BlMq+Gb7jarS+SJQVeFG9VU1P911WRkh4JeC/SZw
+        V14ywqo9EFbtQOWasJdhb+t/NNznuX+ifpoa6GBz5Oq1X0IMPAZkYd4EdlShzam+jfYNuK4bmyBwRQhR
+        Cr96fyNaPiwMfCwF+7s/ijfWBhOMTaTgHDDcdVZps29SFt38z2J1PMk4z8/xZWHVXqnaiIWJFMShotpU
+        0qY8I5AKPQI9AmdPIOOvoFMhylcvBVE34ZszI2Ds/0EG/B8piFPCv0YktbKA3+HO+gDqmHs+AAAAAElF
+        TkSuQmCC
+    </value>
+  </data>
+  <data name="Revit.Elements.Viewport.BySheetViewLocation.Large" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAGAAAABgCAYAAADimHc4AAAGgklEQVR4nO2dX2gcRRzHv2nqP/xDRU1a
+        lGKjDrogWGkrojb+IRZs8UGb1xYM+CTap6IpsixSW4IPQfKqtM8VkZLkwYAYIYg2YB/s0sxDYvtUExUh
+        FaqWnMzN7y6ze7u3u5cbJ7f3+8Bx2Zndmb357vzmNzO/u/RUKhUwCYTBUXj+WdtNwwIkEQa3AbgKYCc8
+        /2+bVW2xWXgHMwigj96twgIkc5BSDxa9sCgsQDKHKPVQ0QuLwgLECYPHAQxQ6gAdW4MFaCRudqyaIRag
+        kbjZsWqG2A01CYNtAJYB3GKk/lv1iDz/TxtVlrcHhMFHCIPdBa8aijU+6HioYN27q/XnoMwm6EsAPyIM
+        PkMYbM95TZq9zzcOqHpUfapeXX8m5TZBujHeArAK4GMA4/D8GynnqofxGoAHEnJXAGyH56+lXHs7gGMA
+        RgHcDeBzeP5InlvcKqVsuwJCiJ52l9kiJwAMU6OcAvA2wuA4PP+LhOL2pjQ+KF3l/9CQEwaHAYwB2EUp
+        q1RvLsrtBXn+NXrya6hGOocwmE0YH7LMTDRf2/nZannrjY9qfbreXHSDGzoOYCmWth/AfGx8yHI3df66
+        nZ+nckyWqL7c9CwsLNRN0CYyHe1Fm4lzKWUqkzEB4H3VHk3qVe10GsA7ZNKSGE4xb6l0hwCoijCb8MS2
+        k+/g+YVXT7tpJqy8lGQvZuOsUfmF6R4BPP8nAGcslX6Gyi9Mt60FnSCb304KuZ1xuksA7R5OtLnUiSJu
+        Z5xcg7CNydoG+Q3AtwDOA/hKCJH+VOsZ7l7y45Ur+VSGt1MU1TYXAUwCmAJwIXXGnEAnCXAJwAy5k98L
+        IdLvSa9qDlGjv9ZkhmsDtWwxTWLMZK2idowAmS6y3rmqPeXPJaxqukAtZc/Ve4fnX47fw9YWbur1TfDB
+        aqEjg0ajD+S46v9GPQQv0usThMGiYapmVchLKwK4INoDVdCUXgDr65D7r6EeknfptawWBjvFC4qaHx2x
+        thPAAQCfAlh0dmfFWKT7PUBBX2c7pQc0oiPWvqbXe506BrQyCLsaA27Qfu2vyg0VQtxMPbPkXtBmGISV
+        n/17TRAhxF+pZ5ZwHrA5vKAo143e8YcQIr0BwkBt0HzQxrpPwfNHW724LAKY3CQzoMRYFkKsRzfrzRfZ
+        ZD2/FdQsXLS6HFHGtSDlWOwgUyNieSfb3Pig8k62enGuqIgO6wE1lAfyjRDin+qx3gOet/TQKZO3p5Ul
+        6TKvhsp642vGLX7eLUX3gs0Ly4jyin6pfy69J5y2HblKIStZpqBC56WtvO6nelgAAD/XPSEdNDWWcM5a
+        NYBKD6Cj5Eo24yKdJ+i6JE9rjOrLTRkFWBFCLBvHx2JxO6huoGubPWJ4L5MZ5ep8db6OettD5ZjsKro3
+        XDYBKrRvoNFup+mjL1HoyGDCgDmVUXY0X12voyCGY3FHowViUUsnwJXY7ljN7VylyZfXJG7nAs0fklih
+        /EZ0eR6Vv1rULS2TAMrtXKgfabfziGHnT5uBuVLKe6WUz0opdRvo5YPplLKnmy4vqHJV+evjw5G8ofGd
+        uxraiDR8fjWjfwPAvripkVLeAeAJAA9S0n3Gk6/MzNGEsrPMk0aPJyMIg4lq/WGgBu6m3lVZBLgecTv1
+        h/7QPEFK2QvgUQCPAOg1svoMAWaoJ8W/ITNT6G606LkmZWUxQZeaLcBJKR8C8DKZiN5Ydn/9L710PBfL
+        n7P19SSURIBKWsgh2fkXACh7nOaf3ymlvMs4jrujWe7phiiDAMre75NS3l9LUHZeSvk0gOcBbMtRRr/x
+        d9ze57P/LVIWE9RLIuyQUqqtyZeMQTYPphm6bOwxLyZtI7aTMrmhvTQ7fSzBzmehTJU58E7G3lWvesbG
+        TfMXtTVbYvvGU7F3xZu2KmY05jgwS1ucs0baqyyAXfqklHpLVoe8HK/9WJOUUonzpI3aWYB1bo14TNGf
+        Kztsq61YgCj9KenWfjGlTGtB7aBfSnk1Vs7DFGlnBRYgyj0AXomlnbdZIZsgx7AAjmEBHMMCOIYFcAwL
+        4BgWwDEsgGNYAMewAI5hARzDAjiGBXAMC+AYFsAxLIBjWADHsACOYQEcwwI4JvLz9aX+6WKLbKQNuQc4
+        hgVwDAvgGBbAMSyAY1gAx7AAjmEBHNNKdLTVaOFug3uAY1gAx+QyQbxGZA/uAY5hARzDAjiGBXAMC+CY
+        iBfUrv+W1Cle02b471DcAxzDArgEwH/G1RHNG1b6HAAAAABJRU5ErkJggg==
+    </value>
+  </data>
+  <data name="Revit.Elements.Viewport.LabelOutline.Small" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAABRElEQVRYhe3VIVLDQBSA4R8GOnSoI1hm
+        ajYGxRHoDTgEFkxvgMOA5RC9ARwBVZM1zKAjYWBABEMzyTbp230vDKbPtKLZ/8t208J2/nl2Vm+qqlIt
+        4L13QJFyTZ7ndXdXVTXEw9lrLJZ6rTkO+h2Ijd8Ax7+vgwFS7vzOOVcC90MBUrf92nt/BFz1faA+jUUh
+        rjvIdw66p6AzXr59mTExgN747eOLGSEBNsZPzs5ZfJ7+GUCM748PAXgo3eCA6PhqtIguQHK8iYg4E/km
+        gDoO8P3xLh3MHGj95jcBvc95Nhkxn03F+OvzE/PZlGwyioqHAE+wPSHiMuv+w9LGQ4CIANYQlngL4Fx9
+        iqMR1ngLkIq4OFia42uAYMQzYY1LgCiEJR4DEBGWeCwgFpEcTwFICFU8FdCHUMc1gBBhimsBTYQpvh2A
+        H3ZwnGDFHNnaAAAAAElFTkSuQmCC
+    </value>
+  </data>
+  <data name="Revit.Elements.Viewport.LabelOutline.Large" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAGAAAABgCAYAAADimHc4AAADr0lEQVR4nO2cvU4UURhADytEDaFYIgZr
+        kyUaC21QS0s6n8CHoNIngIqH4AnoKC1BKSCEmEBirUECxcbgRiIWOyMYNu69M/fn+67faYwzm53JOTuz
+        c+fOAoZhGIZhGIZhGEZSJsa94PLyMsV+tOLo6GgFeJt7P66zsLAw1i1AJ/aOxEaifB9UB9AuHxQHKEE+
+        KA1QinxQGKAk+aAsQGnyQVGAEuWDkgClygcFATLJHwArwCOgW/27Ui0PiuiRcEb5S71e7/2I/XkFbAK3
+        x72J+pFwxtPO2ij5ANXytZAbExkg8zl/veV6L8QFEPCF+7Xlei9EBRAgH2C+5XovxAQQIh/gTcv1XogI
+        IEg+wHJ1tXODavlyyI1lvwwVJr9mwPBqZ53hOX+e4Sd/GYdLUHC/DM0aQKj8IIgfB5Qs34csAUz+FckD
+        mPy/SRrA5N8kWQCTP5okAWLI3zg4ZePgNORbZmEy9gZiyd/6/O3P/18/mQ359kmJegSkkL97fMF2vxty
+        E0mJdgSkkH9npsuDx8/ZH0zR6dxicfok5OaSEOUISCm/MzkFwN75LB+/3wu5ySQED5BDfo3GCEED5JRf
+        oy1CsAAS5NdoihAkgCT5NVoitA4gUX6NhgitAkiWXyM9QuMAGuTXSI7QKIAm+TV757MpR8yrri/0DqBR
+        PsCvi59s7hymuIG32uv13rm+2OtWhGb5Xz594Ef/jK3+cFmkG3he8sHjCChBfmS85YNjgJLkv3w4F+PT
+        30g+OAQw+WNpLB8EPBn3P8sHxwezYh0Fu8cXxcqfmHB6Lsv9ybgYEbb7XfYHc8HeT4p8cA/gfAqqNug8
+        wHDhxcwZT++GuS6XJN8Hr++AGBEWp09aR9AqHxp8CUuLoFk+NLwKkhJBu3xocRmaO0IJ8qHlOCBXhFLk
+        Q4CBWOoIJcmHQCPhVBFKkw8Bb0XEjlCifIjwG7FYI+bNnUNV8oOPhF2JNWJ+dv9q7ki6fB+i/Uoy1g08
+        iDKbFVx+8JtxTVDyq5gon/xsp6DrxDgdBSbLaec60SdkBEfILh8SzYgJjCBCPiSckhQUQYx8SDwnLCCC
+        KPmQYVI+YwRx8iHTUxEZIoiUDxkfS0kYQax8yPxcUIIIouWDgAezIkYQLx8EBIAoEVTIByEBIGgENfJB
+        UAAIEkGVfBAWAFpFUCcfBAaARhFUygehAcArglr5IDgAOEVQLR+EB4B/RlAvHxQEgJERipAPAv52tA/V
+        HDMa5LvOCRuGYRiGYRiGYRiJ+Q2yQ6IfnbRi+gAAAABJRU5ErkJggg==
+    </value>
+  </data>
+  <data name="Revit.Elements.Viewport.SetBoxCenter.Small" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAABrklEQVRYhe2VMUsDMRTHf6cdXJzsIHUv
+        6KTorF/CUSehc+EGW52lOhy4WqwOXV39AoKbYCfh+gGKQzcXB7WSksMzl+QubWwX/3CEJPfy/u+9/F+Y
+        N4LwcaSjsAVcAnuu/GrlfmatUqkY/19Q5qtAB3gCdmeRnJIcl4A6cAIsz8JxApGBfeAFaGmcj5TvQ2bn
+        wCcBFywC20AXuPZF4A7YAJrAm7IfKN8a0AA+gSMfmUgy8A6cA1XgBvgy/D8ALoBTOa+nN3UKKEogwauM
+        bAd4sNh15bg5jXOBRAW/DmgPq88uPWBS52MCOuNkrT2smuwO5dibxrmAWoK07FSISyha2jFwJvdEt7zS
+        yFV3TktHoKRb5Cd6bZ+W6NTK/Ri4LRhsQ47NQgQMEPLricil83vHMzIkjMaitlEUBWEYppdXgHWpfxF5
+        KYqijK1iYyVhY29Lv9GZjpCNhGsJfGJMojCBvMhsaR8MRAMdqygDpwyYSOTU3FpK62uYc7AXG9fn2Dv+
+        CVgJFNT0VDZOKpjkUnoj8BfOBeZ+B3IzoNZ0wt5vRBDHcXqv0APkE/99YL4AvgFur3DXgtJGKgAAAABJ
+        RU5ErkJggg==
+    </value>
+  </data>
+  <data name="Revit.Elements.Viewport.SetBoxCenter.Large" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAGAAAABgCAYAAADimHc4AAAEYklEQVR4nO2cPYhUVxTHfysSDIxGu7Ck
+        EcMKISEYlMBbojZa5ANSmCLYJJhGMEHYgY3pg668BbHRQu3ELdIEixCEEAUHRCH9RbCTdAFdMFU23OWN
+        PN25M+/j3nvumzm/bt4M7555/z0f99wzi6IoihxzGxsb3hbvDzgAXMozjqim1dju4yb9AW8DPwPfANsi
+        2D01tBKgP2AHcBb4Cdg56w+zCY0F6A84AVwE9op+g45TW4BhnAcOz/rD80FlATTOh2GiABrnwzJWAI3z
+        4RkpgMb5eLyyEROO8y+Ax8Aj4A5wO89Yl3ks8dgUINE4/xy4DqzkGX8nYE8Q5pbub6Qe558By3nG1QRs
+        8U4XysldwJX+gFuFp04VKYegUfwBfJZn/Jueac1IKQlXZS3P+DpR22ozsh3dtgzNM+bqfL4/YDcwDywC
+        J2FiO/v0tOSEsecBTTdidQUYse5R4Bqwz/ERm5j3T0N1NDbM5Bm/AO8B54qyMAp5xp/AIeCBYz2bmJdj
+        2ROSyididfJDWw8orbkHeOjwBPsHMd/1zVrlRGvdPc84BRwE7oU16+Wa/wDfOd621doXMewISe1KJ8/4
+        qzjz/Qp4EtrAIhzddbx9LPT6oWlcakbODzcd1w8GXjc4rWp9uyHKMy4AC8AN4L9ABt93XH830HrR8LLZ
+        ipAfnjquvxlgrah4GUsZYvNDhU2UUqIrZ7vzjusvItvhna4IsOi4/jiyHd7pigAnHdcfRbbDO8kLUPSF
+        XHnlTmRzvJO0AEUr4prjbbv3uB3ZJO9UqoKMMRMbRgsLC176P0OKh//bmI7o9WEfyBhzHPjd5/pDXN9r
+        fX39fK/XO9f2/kl6QBF2bBPuY8dHbDt6pfT6TCTTyvxoRWh7E6/7gCb0B5ud07dqHsgsD88CjDEfAZ8L
+        mW9FoI0nBBGgP8Dfrz62sjY8DTPGWPEu27Z6wPUm0UqErg3Z2kP5b0uvz47ZI8SkcTjqkgBr5YkIY8wn
+        sNkITIVGIojngApsGcwyxrwP/Aq8kZittcNRyh7wvJjM2P/aw18sOq57ZM1zUssTUvKAscO5RcL9oZjS
+        SO0v/3Uqe0IQAXwdyg8xxnxYVDtb5pRWV1cb33dpacmDdU4qiZBsDjDGbCse+PfAlx39WdREEZIQwBhj
+        J+PsfOo7wAdABnw65hygS4wVwZsA5X5ROSwEdvPa928TslrgFEF/7RiPkdWRChCXLSKoAPF5RQQVQIaX
+        InShFTGtbCZmMQFCVyOhq69er+dls6khSBgVQJgkcoCvcBQi7FQZSGiDeoAwKoAwQUJQ6AqkDanZph4g
+        jAogjAogjAogjAogjAogjAogjAogjAogjAogjAogTJBeUMy5oLqkZpt6gDAqgDBJnIil3L4OjXqAMCqA
+        MGIhaJbDThn1AGFUAGFUAGFUAGFUAGGCV0F1xw478psvb6gHCKMCCFPp39eHnhCeZdQDhFEBhFEBhFEB
+        hFEBhFEBhFEBhFEBFEVRZhTgf+P2TSRGITHEAAAAAElFTkSuQmCC
+    </value>
+  </data>
+  <data name="Revit.Elements.Viewport.Sheet.Small" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAdElEQVRYhe3UMQ6AIAyF4T7j2HNwRj2B
+        Z6TnYNewkBgBJ9rl/WuHfikJwlh0qPtzzvcKR0oJpZRLVc/eHIBsDgc4KmI09ABMEV6AIcIT0EV4Az6I
+        CMALsa/epKqYzZcCzOzvf0HUE7QIIIAAAggggLHYROQBppgjBYViQyYAAAAASUVORK5CYII=
+    </value>
+  </data>
+  <data name="Revit.Elements.Viewport.Sheet.Large" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAGAAAABgCAYAAADimHc4AAABNUlEQVR4nO3aTU7DMBSFUQd16HVkjbCC
+        rjFZR+YgJgWJAvmxc6X2nAW8yO+TPUoBAAAAAID+hu9fmKbp3c5LGcfxtpdlWa611reW84fha+0vLQc/
+        qNfPCL2OJsA63SIIsF6XCAJs0zyCANs1jSDAPs0iCLBfkwgCHHM4ggDHHYogQBu7IwjQzq4IArS1OYIA
+        7W2KIEAfqyMI0M+qCAL09W8EAfr7M4IA5/g1ggDnuRtBgHP9iHB5gkMfUmsdOo53A9IECPME3THPc+//
+        o27PmhsQJkCYAGEChAkQJkCYAGEChAkQJkCYAGEChAkQJkCYAGEChAkQJkCYAGEChAkQJkCYAGEChAkQ
+        JkCYAGEChAkQJkCYAGEChAkQJkCYAGEChAkQJkCYAGEChAkAAAAAAAAPrpTyAcRIWVcWlqmZAAAAAElF
+        TkSuQmCC
+    </value>
+  </data>
+  <data name="Revit.Elements.Viewport.View.Small" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAiklEQVRYhe2XSwrAIAxEo3iWeJsetrfR
+        y6R0IRRrSqmfdDEDbhSTF4dAdCklIUXM7LSzt8o5q/FjjI5OABGh1asU7nsr7FW43n96rlGqbQ2NuNvE
+        /Hu9YW6BPcCIVvuikhcWAAAAAAAAAAAAAL9iEG2p5IUFrbH8NjovA7AYUP9hgdYJs3/H9iKiAwFBe7X6
+        ouwoAAAAAElFTkSuQmCC
+    </value>
+  </data>
+  <data name="Revit.Elements.Viewport.View.Large" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAGAAAABgCAYAAAGVn0euAAAACXBIWXMAAAsSAAALEgHS3X78AAACeUlE
+        QVR4nO2dYW6DMAxG3aln4TbbYbvbcBkmUKlYCQWjhC+O3vtVTYBjPtuYENhtGAbz8OXa2szu84++77/3
+        Nu667tdtgR2K7OAOjbKx1Pf9cJ9/mNnPzvYPt4Wu627EUvYdRr1coeHewcsrlJYWcx18jCJb1r0FezF7
+        hMe8jVs1D6dywQsGGjewSrQnj+TWJ5lKRSqD50z0jvj9b0Vr0chXzvqTNFDy4PbW5GWvpJaoplkrqV2S
+        yWfC0WWg5MExgAEMYOCogXauaE+ytiz/DJS6Lixvll/k6onG42w2XilKX/0+DXZrPMUlOMORscxOpnrr
+        rC1YTlKOJR1YkKPNy8Fm9hevQ6WZHKgp/o8yj7kNBSKDA2pwQA0OqMEBNTigZnKg1v7/E/OYwyuwd0OT
+        fRohN0kHIt0fhA+h4o+bShPegbunhF6RG97xVDex5ZnUMlqJCggztbgVWk23ErXMi1r7c6ORiZ8DkWem
+        jRCqABxQgwNqcEANDqjBATU4oAYH1OCAGhxQgwNqcEBNfAfGZwHRlhosx0wIqWn6CU31Cz2sWQVYrXIh
+        7YTQkYtZbYs9rJn1QiVaiYgPD7coeX7C53B0VpexliI3F7nOSSqTyAAxCCBmb+H6i4ivF6jwlKzDArxR
+        01LAWjh1800JEoMAYhBADAKImS7C3HxdQ+o8kwFiEEAMAohBADEIIAYBxCCAGAQQgwBiEEAMAohBADEI
+        IAYBxCCAGAQQgwBiEEAMAohBADEIIAYBxCCAGAQQs/pnZizSKkfqPJMBYhBADAKIQQAxZ19RCvEtjAgc
+        FoDuqAyUIDEIIGZVgnK9D8zHOo5BBogJ/72d0JjZH+DdzXpfXXy8AAAAAElFTkSuQmCC
+    </value>
+  </data>
 </root>
