--- a/src/Libraries/RevitNodes/Properties/Resources.en-US.resx
+++ b/src/Libraries/RevitNodes/Properties/Resources.en-US.resx
@@ -522,4 +522,10 @@
   <data name="CantCloseLastOpenView" xml:space="preserve">
     <value>This is the last opened view {0} , can't be delete</value>
   </data>
+  <data name="Sheet_NoLocationSet" xml:space="preserve">
+    <value>Must supply more than 0 locations.</value>
+  </data>
+  <data name="Sheet_ViewLocationMismatch" xml:space="preserve">
+    <value>View count should Equals location count.</value>
+  </data>
 </root>
